@@ -24,5 +24,5 @@
 <?php } ?>
 </li>
     </ul>
-    <div id="f-copyrightico"><a href="http://www.gnu.org/copyleft/fdl.html"><img src="<?php echo $WikiTheme->getImageURL("gnu-fdl.png") ?>" alt="GNU Free Documentation License" /></a></div>
+    <div id="f-opensourceexcellenceico"><a href="https://sourceforge.net/projects/phpwiki/"><img src="<?php echo $WikiTheme->getImageURL("oss-open-source-excellence-white.png") ?>" alt="PhpWiki Reviews" /></a></div>
 </footer>
